<resources>
    <string name="app_name">OnlinePizza</string>
    <string name="pizzaImg">pizzaImg</string>
    <string name="tvText">Order your favorite pizza here!</string>
    <string name="item1">Meat Supreme</string>
    <string name="item2">Super Hawaiian</string>
    <string name="item3">Veggie</string>
    <string name="item4">Mediterranean</string>
    <string name="item5">Cheddar Supreme</string>
    <string name="tvSelectedType">Pizza Type</string>
    <string name="rbSmall">Small</string>
    <string name="rbMedium">Medium</string>
    <string name="rbLarge">Large</string>
    <string name="rbExtraLarge">Extra Large</string>
    <string name="btnNext">Next</string>
    <string name="btnCheckout">Checkout</string>
    <string name="tvFullName">Full Name:</string>
    <string name="tvAddress">Address:</string>
    <string name="tvPostalCode">Postal Code:</string>
    <string name="tvTelephoneNumber">Telephone Number:</string>
    <string name="tvCCNumber">Credit Card:</string>
    <string name="tvCCExpiryDate">Expiry Date:</string>
    <string name="btnOrder">Order Pizza</string>
</resources>
